[gd_scene load_steps=11 format=3 uid="uid://bqkflotm3qks7"]

[ext_resource type="Script" path="res://addons/sprite-shader-mixer/src/extension/shaderinfo/ShaderInfoContainer.gd" id="1_w5epy"]
[ext_resource type="Texture2D" uid="uid://bh3ternlmjqxo" path="res://addons/sprite-shader-mixer/assets/icons/close.svg" id="2_8i1vt"]
[ext_resource type="Texture2D" uid="uid://blwvphk004alx" path="res://addons/sprite-shader-mixer/assets/icons/delete.svg" id="2_l16is"]
[ext_resource type="Texture2D" uid="uid://dcf5gngxrgfkl" path="res://addons/sprite-shader-mixer/assets/icons/up.svg" id="2_rqw54"]
[ext_resource type="Texture2D" uid="uid://cpxfo28hww3v5" path="res://addons/sprite-shader-mixer/assets/icons/down.svg" id="3_tuebg"]
[ext_resource type="Texture2D" uid="uid://nsea1n1hugod" path="res://addons/sprite-shader-mixer/assets/icons/right.svg" id="5_226fn"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_xcbid"]
color = Color(1, 1, 1, 1)
grow_begin = 2.0
grow_end = 2.0
thickness = 6
vertical = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tcxpa"]
content_margin_left = 5.0
draw_center = false
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r53vx"]
content_margin_left = 5.0
draw_center = false

[sub_resource type="FontVariation" id="FontVariation_lpxya"]
variation_face_index = 17
variation_embolden = 1.14

[node name="ShaderInfoControl" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 0
script = ExtResource("1_w5epy")

[node name="container_name" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxLine_xcbid")

[node name="remove_container" type="HBoxContainer" parent="container_name"]
layout_mode = 2
size_flags_horizontal = 8

[node name="button_quit" type="Button" parent="container_name/remove_container"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
icon = ExtResource("2_8i1vt")

[node name="VSeparator" type="VSeparator" parent="container_name/remove_container"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="button_delete" type="Button" parent="container_name/remove_container"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 0.305882, 0, 1)
icon = ExtResource("2_l16is")

[node name="container_title" type="HBoxContainer" parent="container_name"]
layout_mode = 2
size_flags_horizontal = 0

[node name="VSeparator" type="VSeparator" parent="container_name/container_title"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="container_updown" type="VBoxContainer" parent="container_name/container_title"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="button_up" type="Button" parent="container_name/container_title/container_updown"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_tcxpa")
icon = ExtResource("2_rqw54")

[node name="button_down" type="Button" parent="container_name/container_title/container_updown"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_r53vx")
icon = ExtResource("3_tuebg")

[node name="container_name_separator" type="HBoxContainer" parent="container_name/container_title"]
layout_mode = 2
size_flags_horizontal = 0

[node name="space" type="Label" parent="container_name/container_title/container_name_separator"]
custom_minimum_size = Vector2(3, 0)
layout_mode = 2

[node name="label_name" type="Label" parent="container_name/container_title/container_name_separator"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_lpxya")
theme_override_font_sizes/font_size = 24
text = "Glitch"

[node name="container_author" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="label_author" type="Label" parent="container_author"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "author:"

[node name="text_author" type="Label" parent="container_author"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.270588, 1)
theme_override_font_sizes/font_size = 12
text = "spheras"

[node name="container_adaptedby" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="label_adaptedby" type="Label" parent="container_adaptedby"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "adapted:"

[node name="text_adaptedby" type="Label" parent="container_adaptedby"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.270588, 1)
theme_override_font_sizes/font_size = 12
text = "spheras"

[node name="container_link" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="label_link" type="Label" parent="container_link"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "link:"

[node name="text_link" type="Label" parent="container_link"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.270588, 1)
theme_override_font_sizes/font_size = 12
text = "http://www.github.com"
text_overrun_behavior = 4
max_lines_visible = 1
visible_characters_behavior = 2

[node name="container_license" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="label_license" type="Label" parent="container_license"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "license:"

[node name="text_license" type="Label" parent="container_license"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.270588, 1)
theme_override_font_sizes/font_size = 12
text = "MIT"

[node name="container_version" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="label_version" type="Label" parent="container_version"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "vesion:"

[node name="text_version" type="Label" parent="container_version"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.270588, 1)
theme_override_font_sizes/font_size = 12
text = "1.0"

[node name="container_description" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="label_description" type="Label" parent="container_description"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "description:"

[node name="text_description" type="Label" parent="container_description"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.270588, 1)
theme_override_font_sizes/font_size = 12
text = "This shader dlsfkjas ldkfasldfjañlsj fañlsfj añlsfj ñlasfjñlasfjaklfjñafj adsñlf jñalsdfjñlsjfñlasdjfñlasjdkfdlsfkjas ldkfasldfjañlsj fañlsfj añlsfj ñlasfjñlasfjaklfjñafj adsñlf jñalsdfjñlsjfñlasdjfñlasjdkfdlsfkjas ldkfasldfjañlsj fañlsfj añlsfj ñlasfjñlasfjaklfjñafj adsñlf jñalsdfjñlsjfñlasdjfñlasjdkfdlsfkjas ldkfasldfjañlsj fañlsfj añlsfj ñlasfjñlasfjaklfjñafj adsñlf jñalsdfjñlsjfñlasdjfñlasjdkfdlsfkjas ldkfasldfjañlsj fañlsfj añlsfj ñlasfjñlasfjaklfjñafj adsñlf jñalsdfjñlsjfñlasdjfñlasjdkfdlsfkjas ldkfasldfjañlsj fañlsfj añlsfj ñlasfjñlasfjaklfjñafj adsñlf jñalsdfjñlsjfñlasdjfñlasjdkf"
autowrap_mode = 3

[node name="container_parameters" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="button_parameters" type="Button" parent="container_parameters"]
layout_mode = 2
toggle_mode = true
text = "Parameters"
icon = ExtResource("5_226fn")
alignment = 0

[node name="container_parameters_inside" type="VBoxContainer" parent="container_parameters"]
layout_mode = 2
